# drnotes

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  package.sh  pyproject.toml  requirements.txt  run.sh
.specify/memory/: constitution.md
docs/: product-requirements-document.md
sample-notes/: Welcome to DrNotes.md
specs/001-establishing-baseline-specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-establishing-baseline-specs/checklists/: requirements.md
specs/002-multi-file-tabs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multi-file-tabs/checklists/: requirements.md
specs/002-multi-file-tabs/contracts/: tabbed-workspace.md
src/drnotes/: __main__.py  app.py  main_window.py  settings.py  syntax_highlighter.py
src/drnotes/widgets/: __init__.py  directory_tree.py  editor.py  preview.py  search_panel.py  toolbar.py  workspace_tabs.py
tests/: test_preview_template.py  test_workspace_tabs.py
